--- a/app/src/main/res/layout/fragment_dagger.xml
+++ b/app/src/main/res/layout/fragment_dagger.xml
@@ -4,22 +4,22 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:paddingTop="32dp"
-        android:text="@string/title_fragment_1"
+        android:text="@string/title_fragment_dagger"
         android:textAppearance="@android:style/TextAppearance.Material.Large" />
 
     <TextView
         android:id="@+id/textViewDescrioption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView1"
+        android:layout_below="@id/textView4"
         android:layout_centerHorizontal="true"
         android:padding="16dp"
-        android:text="@string/description_using_data" />
+        android:text="@string/description_using_dagger" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,20 +28,18 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/bSetState"
+        <TextView
+            android:paddingTop="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="Set State" />
+            android:textSize="20sp"
+            android:text="@string/data"/>
 
         <TextView
-            android:id="@+id/textStatus"
+            android:id="@+id/textData"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/bSetState"
-            android:layout_centerHorizontal="true"
-            android:text="0"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:text="-"/>
     </LinearLayout>
 </RelativeLayout>
