--- a/app/src/main/res/layout/fragment_view2.xml
+++ b/app/src/main/res/layout/fragment_view2.xml
@@ -4,11 +4,21 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:paddingTop="32dp"
         android:text="@string/title_fragment_2"
         android:textAppearance="@android:style/TextAppearance.Material.Large" />
+
+    <TextView
+        android:layout_below="@id/textView2"
+        android:id="@+id/textViewDescrioption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="@string/description_simple"
+        android:padding="16dp"
+        />
 </RelativeLayout>
