--- a/demo/src/main/res/layout/fragment_view3.xml
+++ b/demo/src/main/res/layout/fragment_view3.xml
@@ -9,8 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:paddingTop="32dp"
-        android:text="@string/title_fragment_3"
-        android:textAppearance="@android:style/TextAppearance.Material.Large" />
+        android:text="@string/title_fragment_3" />
 
     <TextView
         android:layout_below="@id/textView3"
