--- a/demo/src/main/res/layout/fragment_view_model.xml
+++ b/demo/src/main/res/layout/fragment_view_model.xml
@@ -9,8 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:paddingTop="32dp"
-        android:text="@string/title_fragment_view_model"
-        android:textAppearance="@android:style/TextAppearance.Material.Large" />
+        android:text="@string/title_fragment_view_model" />
 
     <TextView
         android:id="@+id/textViewDescrioption"
