--- a/demo/src/main/res/layout/main_content.xml
+++ b/demo/src/main/res/layout/main_content.xml
@@ -10,7 +10,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.ix.appskeleton.MainActivity"
     tools:showIn="@layout/main_layout">
 
     <!--<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
@@ -19,6 +18,6 @@
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
