--- a/skeleton/src/main/res/layout/main_nav_header.xml
+++ b/skeleton/src/main/res/layout/main_nav_header.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/main_nav_bar"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -13,23 +14,23 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/drawerImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        android:paddingTop="@dimen/nav_header_vertical_spacing" />
 
     <TextView
+        android:id="@+id/drawerTextPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Example Menu"
+        tools:text="Example Menu"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/drawerTextSecondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="android@example.com" />
+        tools:text="android@example.com" />
 
 </LinearLayout>
