FEAT: added behaviour subject to base fragment, all subclasses can use this subject to post their state

--- a/demo/src/main/res/layout/fragment_subview.xml
+++ b/demo/src/main/res/layout/fragment_subview.xml
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center">
 
     <TextView
         android:id="@+id/textViewSub"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:text="Subfragment"/>
 
     <Button
         android:id="@+id/bSetStateSub"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textViewSub"
-        android:layout_centerHorizontal="true"
         android:text="Set State" />
 
     <TextView
         android:id="@+id/textStatusSub"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewSub"
-        android:layout_centerHorizontal="true"
         android:text="0"
         android:textSize="24sp" />
-</RelativeLayout>
+</LinearLayout>
