--- a/demo/src/main/res/menu/main.xml
+++ b/demo/src/main/res/menu/main.xml
@@ -27,6 +27,11 @@
         android:title="@string/menu_item_5" />
 
     <item
+        android:id="@+id/menu_item_6"
+        android:checkable="true"
+        android:title="@string/menu_item_6" />
+
+    <item
         android:id="@+id/menu_item_preferences"
         android:checkable="true"
         android:icon="@drawable/ic_menu_manage"
