--- a/demo/src/main/res/xml/main_preferences.xml
+++ b/demo/src/main/res/xml/main_preferences.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v7.preference.CheckBoxPreference
+    <androidx.preference.CheckBoxPreference
         android:defaultValue="true"
         android:key="test_bool"
         android:summary="Testing bool pref summary"
         android:title="Testing bool preference" />
 
-    <android.support.v7.preference.EditTextPreference
+    <androidx.preference.EditTextPreference
         android:defaultValue=""
         android:key="test_string"
         android:summary="Testing string pref summary"
         android:title="Testing string preference" />
 
-    <android.support.v7.preference.ListPreference
+    <androidx.preference.ListPreference
         android:defaultValue="Entry 2"
         android:dialogTitle="Choose preference 2"
         android:entries="@array/pref_test2_entries"
@@ -21,4 +21,4 @@
         android:key="pref_test2"
         android:title="Preference 2" />
 
-</android.support.v7.preference.PreferenceScreen>
+</androidx.preference.PreferenceScreen>
